--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -31,7 +31,7 @@ spec:
         server: '{{server}}'
         namespace: '{{path.basename}}'
  # Sync policy
-  syncPolicy:
-    automated:
-      prune: false
-      selfHeal: false
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
