--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -7,6 +7,10 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
+  ignoreDifferences:
+    - group: core
+      jsonPointers:
+      - /data/my-password
 
   source:
     repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
